--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     }
 
     .banner-image {
-      background-image: url('public/aboutus.webp');
+      background-image: url('public/man-is-working-metal-factory-he-is-welding-piece-rail-using-special-tools.jpg');
       background-size: cover;
       background-position: center;
       height: 60vh;
