--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     }
 
     .banner-image {
-      background-image: url('public/common-img1.avif');
+      background-image: url('public/male-working-with-welding-torch.jpg');
       background-size: cover;
       background-position: center;
       height: 60vh;
@@ -205,11 +205,11 @@ document.addEventListener("DOMContentLoaded", () => {
   <section class="contact-banner">
     <div class="banner-image">
       <h1>Contact us</h1>
-      <svg viewBox="0 0 1440 320" xmlns="http://www.w3.org/2000/svg">
+      <!-- <svg viewBox="0 0 1440 320" xmlns="http://www.w3.org/2000/svg">
         <path fill="#ffffff" fill-opacity="1"
           d="M0,224L48,224C96,224,192,224,288,202.7C384,181,480,139,576,144C672,149,768,203,864,208C960,213,1056,171,1152,160C1248,149,1344,171,1392,181.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
         </path>
-      </svg>
+      </svg> -->
     </div>
   </section>
 
