--- a/index.html
+++ b/index.html
@@ -1525,10 +1525,10 @@ document.addEventListener("DOMContentLoaded", () => {
 <div class="container">
         
         <section class="hero-section">
-            <div class="image-container">
+            <!-- <div class="image-container">
                 <img src="https://images.unsplash.com/photo-1564182998523-6923112e7d6b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHdlbGRpbmd8ZW58MHx8MHx8fDA%3D" alt="Starry Night" class="img-main">
                 <img src="https://images.unsplash.com/photo-1698664683348-f9f35b809821?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8d2VsZGluZ3xlbnwwfHwwfHx8MA%3D%3D" alt="Stargazer" class="img-overlay">
-            </div>
+            </div> -->
 
           <section class="about-dark-wrapper" id="about">
     <div class="about-container">
